[package]
name = "omni-stream-backend"
version = "1.0.0"
edition = "2021"
rust-version = "1.86"

[dependencies]
axum = { version = "=0.7.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

reqwest = { version = "=0.11.27", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls"
] }

tower-http = { version = "=0.5.2", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = "1"

tokio-tungstenite = { version = "=0.21.0", features = ["rustls-tls-native-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }

tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = true
panic = "abort"
