[package]
name = "crypto-terminal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "tls-native-tls"] }
aes-gcm = "0.10"
base64 = "0.21"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
